Added master template, navbar, CV and external links

--- a/members/templates/add.html
+++ b/members/templates/add.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<form action="addrecord" method="post">
-	{% csrf_token %}
-	First Name<br>
-	<input name="first">
-	<br><br>
-	Last Name<br>
-	<input name="last">
-	<br><br>
-	<input type="submit" value="Submit">
-</form>
+	{% extends 'master.html' %}
+	{% block content %}
+	<form action="addrecord" method="post">
+		{% csrf_token %}
+		First Name<br>
+		<input name="first">
+		<br><br>
+		Last Name<br>
+		<input name="last">
+		<br><br>
+		<input type="submit" value="Submit">
+	</form>
+	{% endblock %}
 </body>
 
 </html>
