--- a/members/templates/update.html
+++ b/members/templates/update.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<form action="updaterecord/{{ member.id }}" method="post">
-	{% csrf_token %}
-	First Name<br>
-	<input name="first" value="{{ member.firstname }}">
-	<br><br>
-	Last Name<br>
-	<input name="last" value="{{ member.lastname }}">
-	<br><br>
-	<input type="submit" value="Submit">
-</form>
+	{% extends 'master.html' %}
+	{% block content %}
+	<form action="updaterecord/{{ member.id }}" method="post">
+		{% csrf_token %}
+		First Name<br>
+		<input name="first" value="{{ member.firstname }}">
+		<br><br>
+		Last Name<br>
+		<input name="last" value="{{ member.lastname }}">
+		<br><br>
+		<input type="submit" value="Submit">
+	</form>
+	{% endblock %}
 </body>
 
 </html>
