--- a/static/members/css/master.css
+++ b/static/members/css/master.css
@@ -43,6 +43,10 @@ html,body {
     transform: scale(1.1);
 }
 
+.navbar-item-text.active,.navbar-item-icon.active{
+    color: #000000;
+}
+
 .content {
     height:100%;
 }
